fix #121: view - controller 분리 중 임시 커밋